Stories: fix shimmer color, caption overflow

--- a/src/components/stories/viewer.module.scss
+++ b/src/components/stories/viewer.module.scss
@@ -139,6 +139,7 @@ $color-inactive: rgba(255, 255, 255, .5);
     border-radius: calc(#{$border-radius-medium} * (1 / var(--scale)));
     overflow: hidden;
     position: relative;
+    z-index: 0;
 
     // shimmer
     &:before {
@@ -526,6 +527,8 @@ $color-inactive: rgba(255, 255, 255, .5);
         height: 100%;
         position: relative;
         display: table;
+        word-break: break-word;
+        white-space: pre-wrap;
         // display: flex;
         // align-items: flex-end;
 
